sortable list done

--- a/09-tests-for-frontend-apps/2-sortable-list/style.css
+++ b/09-tests-for-frontend-apps/2-sortable-list/style.css
@@ -103,6 +103,7 @@ body {
   border: 1px solid var(--blue);
   margin: 0;
   z-index: 10000;
+  pointer-events: none;
 }
 
 .sortable-list__placeholder {
